[gd_scene load_steps=9 format=3 uid="uid://dq7je1jcmeusk"]

[ext_resource type="PackedScene" uid="uid://btcpjdktuymx" path="res://scenes/tile_map.tscn" id="1_ndn2m"]
[ext_resource type="Script" path="res://scenes/path_to_tent.gd" id="1_y5rgh"]
[ext_resource type="PackedScene" uid="uid://bhysbh3p85m13" path="res://scenes/christina.tscn" id="2_df37t"]
[ext_resource type="PackedScene" uid="uid://c4unx6bdwbf2e" path="res://scenes/actionable.tscn" id="3_bohrm"]
[ext_resource type="Resource" uid="uid://da2bfe0ogbd0s" path="res://dialogue/tree_eye.dialogue" id="4_pkf1g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_31mdk"]
radius = 11.0454

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ack0c"]
size = Vector2(76, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y27q2"]
size = Vector2(75, 20)

[node name="path_to_tent" type="Node2D"]
script = ExtResource("1_y5rgh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="TileMap" parent="." instance=ExtResource("1_ndn2m")]
layer_0/tile_data = PackedInt32Array(2818113, 65541, 1, 2752577, 65541, 1, 2687041, 65541, 1, 2621505, 65541, 1, 2555969, 5, 1, 2490433, 65541, 1, 2818112, 458757, 1, 2752575, 327685, 1, 2687039, 327685, 1, 2621503, 327685, 1, 2555967, 327685, 4, 2490431, 393221, 0, 2490432, 458757, 0, 2555968, 458757, 1, 2621504, 458757, 1, 2687040, 458757, 1, 2752576, 458757, 1, 2687038, 65541, 1, 2621502, 65541, 1, 2555966, 393221, 2, 2490430, 393221, 0, 3014719, 327685, 1, 2949183, 327685, 1, 2883647, 327685, 1, 2818111, 327685, 1, 2883648, 458757, 1, 2949184, 458757, 1, 3014720, 458757, 1, 3080255, 327685, 1, 3080256, 458757, 1, 2490429, 393221, 0, 2490428, 393221, 0, 2490427, 393221, 0, 2490426, 393221, 0, 2555965, 393221, 2, 2555964, 393221, 2, 2555963, 393221, 2, 2555962, 393221, 2, 2555961, 393221, 2, 2555960, 393221, 2, 2490425, 393221, 0, 2490424, 393221, 0, 2555958, 327685, 2, 2555959, 393221, 2, 2490423, 393221, 3, 2490422, 327685, 1, 2424886, 327685, 1, 2359350, 327685, 1, 2293814, 327685, 1, 2424887, 458757, 1, 2359351, 458757, 1, 2293815, 458757, 1, 3080254, 65541, 1, 3080246, 65541, 1, 2949174, 65541, 1, 2621494, 5, 0, 2621498, 65541, 1, 2621500, 65541, 1, 2621501, 131077, 2, 2752574, 65541, 1, 2949182, 65541, 1, 3014718, 5, 2, 2687037, 65541, 1, 2883646, 65541, 1, 2687030, 65541, 1, 2752566, 65541, 1, 2818102, 65541, 1, 2883638, 131077, 1, 3014710, 65541, 1, 3080247, 65541, 1, 3080248, 65541, 1, 3080249, 65541, 1, 3080250, 65541, 1, 3080251, 65541, 1, 3080252, 5, 0, 3080253, 131077, 1, 2818110, 65541, 1, 2621499, 65541, 1, 2621497, 65541, 1, 2621496, 65541, 0, 2621495, 65541, 1, 2687031, 65541, 1, 2752567, 65541, 1, 2818103, 65541, 1, 2883639, 65541, 1, 2949175, 65541, 1, 3014711, 5, 0, 3014712, 5, 1, 3014713, 65541, 1, 3014714, 65541, 2, 3014715, 65541, 1, 3014716, 65541, 1, 3014717, 65541, 1, 2949181, 65541, 1, 2883645, 65541, 1, 2818109, 65541, 2, 2752573, 65541, 1, 2687033, 65541, 1, 2687032, 131077, 1, 2687034, 65541, 1, 2687035, 65541, 1, 2752571, 65541, 1, 2752572, 5, 0, 2818108, 65541, 1, 2687036, 131077, 2, 2883644, 131077, 2, 2949180, 65541, 1, 2949179, 131077, 2, 2949178, 65541, 1, 2949177, 131077, 2, 2949176, 65541, 1, 2883640, 65541, 1, 2818104, 65541, 1, 2752568, 65541, 1, 2752569, 65541, 1, 2752570, 65541, 1, 2818106, 65541, 1, 2883642, 65541, 1, 2883643, 65541, 1, 2818107, 65541, 1, 2818105, 65541, 1, 2883641, 65541, 1, 2883649, 65541, 1, 2949185, 65541, 1, 3014721, 65541, 1, 3080257, 65541, 1, 3080245, 65541, 1, 3014709, 65541, 1, 2949173, 65541, 1, 2883637, 65541, 1, 2818101, 65541, 2, 2752565, 65541, 1, 2687029, 65541, 1, 2621493, 5, 0, 2555957, 65541, 1, 2490421, 65541, 1, 2424885, 65541, 1, 2359349, 65541, 1, 2293813, 131077, 2, 2424888, 65541, 1, 2359352, 131077, 1, 2293816, 65541, 1)
layer_1/tile_data = PackedInt32Array(2359360, 131075, 0, 2359359, 3, 0, 2359358, 3, 0, 2359357, 3, 0, 2424893, 65539, 1, 2424894, 65539, 1, 2359361, 3, 0, 2293824, 3, 0, 2293823, 3, 0, 2293822, 3, 0, 2293821, 3, 0, 2293820, 3, 0, 2424892, 65539, 1, 2424897, 65539, 1, 2424896, 65539, 1, 2424895, 65539, 1, 2359356, 65539, 0, 2424891, 65539, 1, 2424890, 65539, 1, 2424889, 65539, 1, 2359355, 3, 0, 2359354, 65539, 0, 2359353, 3, 0, 2293819, 3, 0, 2293818, 3, 0, 2293817, 3, 0)
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(3080257, 327683, 1, 3014721, 327683, 1, 2949185, 327683, 1, 2883649, 327683, 1, 2818113, 327683, 1, 2752577, 327683, 1, 2687041, 327683, 1, 2621505, 327683, 1, 2555969, 327683, 1, 2490433, 327683, 1, 2424897, 327683, 1, 2359361, 327683, 1, 2293825, 327683, 4, 2293824, 393219, 2, 2293823, 393219, 2, 2293822, 393219, 2, 2293821, 393219, 2, 2293820, 393219, 2, 2293819, 393219, 2, 2293818, 393219, 2, 2293817, 393219, 2, 2293816, 327683, 2, 2293813, 458755, 1, 2359349, 458755, 1, 2424885, 458755, 1, 2490421, 458755, 1, 2555957, 458755, 1, 2621493, 458755, 1, 2687029, 458755, 1, 2752565, 458755, 1, 2818101, 458755, 1, 2883637, 458755, 1, 2949173, 458755, 1, 3014709, 458755, 1, 3080245, 393219, 3, 3080246, 393219, 0, 3080247, 393219, 0, 3080248, 393219, 0, 3080249, 393219, 0, 3080250, 393219, 0, 3080251, 393219, 0, 3080252, 393219, 0, 3080253, 393219, 0, 3080254, 458755, 0)
layer_3/tile_data = PackedInt32Array()
layer_6/name = "shadow"
layer_6/z_index = 1
layer_6/tile_data = PackedInt32Array(2490425, 393241, 2, 2490426, 393241, 2, 2490427, 393241, 2, 2490428, 393241, 2, 2490429, 393241, 2, 2490430, 393241, 2, 2490431, 393241, 2, 2424897, 393241, 1, 2424896, 393241, 1, 2424895, 393241, 1, 2424894, 393241, 1, 2424893, 393241, 1, 2424892, 393241, 1, 2424891, 393241, 1, 2424890, 393241, 1, 2424889, 393241, 1, 2359353, 393241, 1, 2359354, 393241, 1, 2359355, 393241, 1, 2359356, 393241, 1, 2359357, 393241, 1, 2359358, 393241, 1, 2359359, 393241, 1, 2359360, 393241, 1, 2359361, 393241, 1, 2293825, 393241, 1, 2293824, 393241, 1, 2293823, 393241, 1, 2293822, 393241, 1, 2293821, 393241, 1, 2293820, 393241, 1, 2293819, 393241, 1, 2293818, 393241, 1, 2293817, 393241, 1, 2490424, 327705, 2, 2424888, 327705, 1, 2359352, 327705, 1, 2293816, 327705, 1, 2490433, 327705, 4, 2490432, 393241, 2)

[node name="Christina" parent="." instance=ExtResource("2_df37t")]
position = Vector2(730, 457)

[node name="Camera2D" type="Camera2D" parent="Christina"]
zoom = Vector2(6, 6)
limit_left = 665
limit_top = 444
limit_right = 1081
limit_bottom = 860
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Actionable" parent="." instance=ExtResource("3_bohrm")]
dialogue_resource = ExtResource("4_pkf1g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actionable"]
position = Vector2(1033, 517)
shape = SubResource("CircleShape2D_31mdk")

[node name="tent_path_exit_point" type="Area2D" parent="."]
position = Vector2(991, 870)

[node name="CollisionShape2D" type="CollisionShape2D" parent="tent_path_exit_point"]
position = Vector2(28, 0)
shape = SubResource("RectangleShape2D_ack0c")

[node name="tent_path_start_point" type="Area2D" parent="."]
position = Vector2(703, 434)

[node name="CollisionShape2D" type="CollisionShape2D" parent="tent_path_start_point"]
position = Vector2(27.5, 0)
shape = SubResource("RectangleShape2D_y27q2")

[connection signal="body_entered" from="tent_path_exit_point" to="." method="_on_tent_path_exit_point_body_entered"]
[connection signal="body_exited" from="tent_path_exit_point" to="." method="_on_tent_path_exit_point_body_exited"]
[connection signal="body_entered" from="tent_path_start_point" to="." method="_on_tent_path_start_point_body_entered"]
[connection signal="body_exited" from="tent_path_start_point" to="." method="_on_tent_path_start_point_body_exited"]
